Updates to Apache config

--- a/docker/pro/000-default.conf
+++ b/docker/pro/000-default.conf
@@ -1,4 +1,8 @@
 <VirtualHost *:80>
+	ServerName www.blendercoders.xyz
+	Redirect permanent / http://blendercoders.xyz/
+</VirtualHost>
+<VirtualHost *:80>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -6,10 +10,7 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	#ServerName 127.0.0.1
-
-	ServerName www.blendercoders.xyz
-	Redirect permanent / http://blendercoders.xyz/
+	ServerName blendercoders.xyz
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
