--- a/docker/pro/000-default.conf
+++ b/docker/pro/000-default.conf
@@ -1,8 +1,4 @@
 <VirtualHost *:80>
-	ServerName www.blendercoders.xyz
-	Redirect permanent / http://blendercoders.xyz/
-</VirtualHost>
-<VirtualHost *:80>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -10,7 +6,9 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
+
 	ServerName blendercoders.xyz
+
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
@@ -34,14 +32,18 @@
 	WSGIDaemonProcess blendercoders
 	WSGIPassAuthorization On
 
-	WSGIScriptAlias / /data/git/blendercoders/blendercoders/runserver.wsgi \
+	WSGIScriptAlias / /data/git/blender-coders/blender-coders/runserver.wsgi \
 		process-group=blendercoders application-group=%{GLOBAL}
 
-	<Directory /data/git/blendercoders/blendercoders>
+	<Directory /data/git/blender-coders/blender-coders>
 		<Files runserver.wsgi>
 			Require all granted
 		</Files>
 	</Directory>
 </VirtualHost>
 
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+<VirtualHost *:80>
+	ServerName www.blendercoders.xyz
+	RewriteEngine On
+	RewriteRule "^/(.*)" "http://blendercoders.xyz/$1" [R=301,L]
+</VirtualHost>
