Update config to support letsencrypt renewals

--- a/docker/3_run/000-default.conf
+++ b/docker/3_run/000-default.conf
@@ -11,7 +11,7 @@
 
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html
+	DocumentRoot /data/letsencrypt/blender-coders
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
@@ -28,6 +28,14 @@
 	# following line enables the CGI configuration for this host only
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
+
+
+	Alias /.well-known /data/letsencrypt/blender-coders/.well-known
+	<Directory /data/letsencrypt/blender-coders>
+		Require all granted
+		AllowOverride None
+	</Directory>
+
 
 	WSGIDaemonProcess blendercoders
 	WSGIPassAuthorization On
